# the-manager-football

./: .gitignore  Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/domain/: errors.rs  mod.rs
crates/engine/src/domain/clubs/entities/: club.rs  mod.rs  player.rs  team.rs
crates/engine/src/domain/clubs/value_objects/: mod.rs
crates/engine/src/domain/clubs/value_objects/club/: name.rs
crates/engine/src/domain/clubs/value_objects/player/: attributes.rs  mod.rs
crates/engine/src/domain/clubs/value_objects/player/position/: mod.rs  position_type.rs  positions.rs
crates/engine/src/domain/competitions/entities/: league.rs  match.rs  mod.rs
crates/engine/src/domain/competitions/value_objects/league/: mod.rs  name.rs  row.rs  schedule.rs  table.rs
crates/engine/src/domain/competitions/value_objects/match/: mod.rs  statistics.rs  status.rs
crates/engine/src/domain/shared/value_objects/: attribute.rs  mod.rs  person_name.rs  reputation.rs
crates/engine/src/domain/state/entities/: season.rs
crates/engine/src/domain/state/value_objects/season/: state.rs
