[package]
name = "engine"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
rand = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
